--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,6 @@ FILE(GLOB SETTINGS_CPP "${SRC_DIR}/settings/*.cpp")
 FILE(GLOB CONNECTION_CPP "${SRC_DIR}/connection/*.cpp")
 FILE(GLOB WINDOWS_CPP "${SRC_DIR}/windows/*.cpp")
 FILE(GLOB QXPOTRACE_CPP "third_party/QxPotrace/src/qxpotrace.cpp")
-FILE(GLOB CLIPPER_CPP "third_party/clipper/clipper.cpp")
 
 SET(SOURCES
         ${SRC_DIR}/layer.cpp
@@ -51,7 +50,6 @@ SET(SOURCES
         ${SETTINGS_CPP}
         ${WINDOWS_CPP}
         ${QXPOTRACE_CPP}
-        ${CLIPPER_CPP}
         ${SRC_DIR}/canvas/cache-stack.cpp
         ${SRC_DIR}/canvas/canvas.cpp
         ${SRC_DIR}/parser/svgpp-parser.cpp
@@ -88,6 +86,9 @@ IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
             ${SRC_DIR}/windows/osxwindow.mm)
 ENDIF ()
 
+# Build third_party libraries
+ADD_SUBDIRECTORY(third_party/clipper)
+
 SET(MAIN_SOURCE ${SOURCES})
 qt5_add_resources(MAIN_SOURCE "qml.qrc")
 
@@ -106,5 +107,7 @@ target_link_libraries(swiftray Qt::Gui)
 target_link_libraries(swiftray Qt::Svg)
 target_link_libraries(swiftray Qt::Widgets)
 target_link_libraries(swiftray Qt::SerialPort)
+
+target_link_libraries(swiftray CLIPPER)
 
 add_subdirectory(tests)
