--- a/.github/workflows/build-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-macos-Qt-5_15_2.yml
@@ -13,10 +13,10 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '11.2.1'
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.9'
-          cache: 'pip'
+      #- uses: actions/setup-python@v3
+      #  with:
+      #    python-version: '3.9'
+      #    cache: 'pip'
       - run: mkdir $RUNNER_WORKSPACE/dev/
       
       - name: Install dependencies for project
