--- a/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
+++ b/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
@@ -19,6 +19,7 @@ jobs:
             mingw-w64-x86_64-boost
             mingw-w64-x86_64-qt5
             mingw-w64-x86_64-libxml2
+            mingw-w64-x86_64-gcc
             libxml2
         
       - name: 
