--- a/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
+++ b/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
@@ -20,6 +20,7 @@ jobs:
             mingw-w64-x86_64-qt5
             mingw-w64-x86_64-libxml2
             mingw-w64-x86_64-gcc
+            make
             libxml2
         
       - name: 
