Try fix mingw path

--- a/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
+++ b/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
@@ -31,6 +31,7 @@ jobs:
           pwd
           mkdir build
           cd build
+          export MINGW64_PATH=/mingw64
           qmake.exe -o Makefile ../swiftray.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
           #mingw32-make -j4
           make -j4
