--- a/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
+++ b/.github/workflows/build-win64-mingw-Qt-5_15_3.yml
@@ -31,9 +31,11 @@ jobs:
           pwd
           mkdir build
           cd build
-          export MINGW64_PATH=${{ runner.temp }}/msys64/mingw64
+          export PATH="/mingw64/bin:$PATH"
+          echo $PATH
+          export MINGW64_PATH=/mingw64
+          echo ${MINGW64_PATH}
           qmake.exe -o Makefile ../swiftray.pro -spec win32-g++ "CONFIG+=qtquickcompiler"
-          #mingw32-make -j4
           make -j4
           ls
           
