--- a/.github/workflows/build-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-macos-Qt-5_15_2.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '11.2.1'
+          xcode-version: '11.3'
       #- uses: actions/setup-python@v3
       #  with:
       #    python-version: '3.9'
@@ -88,6 +88,54 @@ jobs:
           cd build
           $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
           tree .
+
+      #- uses: actions/upload-artifact@v3
+      #  with:
+      #    name: build
+      #    path: build/ # or path/to/artifact
+
+      - name: Select XCode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '12.4.0'
+
+      #- uses: actions/download-artifact@v3
+      #  with:
+      #    name: build
+      #- run: ls
+
+      - name: Codesign executable
+        env: 
+          MACOS_CERTIFICATE: ${{ secrets.DEVELOPMENT_CERTIFICATE_DATA }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.DEVELOPMENT_CERTIFICATE_PASSPHRASE }}
+          MACOS_KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          #SIGN_IDENTITY_ID: 
+        run: |
+          echo $MACOS_CERTIFICATE | base64 --decode > certificate.p12
+          security create-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
+          security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $MACOS_KEYCHAIN_PASSWORD build.keychain
+          cd build
+          /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app"
+
+      - name: Notarize Release Build
+        env: 
+          ASC_PROVIDER: ${{ secrets.ASC_PROVIDER }}
+        uses: erwin1/xcode-notarize@main
+        with:
+          product-path: "build/Swiftray.app"
+          appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
+          appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
+          asc-provider: ${{ secrets.ASC_PROVIDER }}
+          verbose: true
+
+      - name: "Staple Release Build"
+        uses: devbotsxyz/xcode-staple@v1
+        with:
+          product-path: "build/Swiftray.app"
+
       - name: Create dmg
         run: |
           brew install create-dmg
