--- a/.github/workflows/build-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-macos-Qt-5_15_2.yml
@@ -95,6 +95,15 @@ jobs:
           path: build/ # or path/to/artifact
 
   codesign-notarize:
+    runs-on: macos-10.15
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Select XCode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '12.4.0'
+
       - uses: actions/download-artifact@v3
         with:
           name: build
