--- a/.github/workflows/build-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-macos-Qt-5_15_2.yml
@@ -89,27 +89,20 @@ jobs:
           $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
           tree .
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: build/ # or path/to/artifact
+      #- uses: actions/upload-artifact@v3
+      #  with:
+      #    name: build
+      #    path: build/ # or path/to/artifact
 
-  codesign-notarize:
-    needs: setup-macos-build-environment
-    runs-on: macos-10.15
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '12.4.0'
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - run: ls
+      #- uses: actions/download-artifact@v3
+      #  with:
+      #    name: build
+      #- run: ls
 
       - name: Codesign executable
         env: 
@@ -124,6 +117,7 @@ jobs:
           security unlock-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
           security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $MACOS_KEYCHAIN_PASSWORD build.keychain
+          cd build
           /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app"
 
       - name: Notarize Release Build
@@ -131,7 +125,7 @@ jobs:
           ASC_PROVIDER: ${{ secrets.ASC_PROVIDER }}
         uses: erwin1/xcode-notarize@main
         with:
-          product-path: "Swiftray.app"
+          product-path: "build/Swiftray.app"
           appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
           appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
           asc-provider: ${{ secrets.ASC_PROVIDER }}
@@ -140,11 +134,12 @@ jobs:
       - name: "Staple Release Build"
         uses: devbotsxyz/xcode-staple@v1
         with:
-          product-path: "Swiftray.app"
+          product-path: "build/Swiftray.app"
 
       - name: Create dmg
         run: |
           brew install create-dmg
+          cd build
           create-dmg --volname "Swiftray Installer" \
             --volicon "Swiftray.app/Contents/Resources/icon.icns" \
             --window-pos 200 120 \
@@ -160,4 +155,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Swiftray-Installer.dmg
+          files: build/Swiftray-Installer.dmg
