Fix missing unicode/ucnv.h

--- a/.github/workflows/build-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-macos-Qt-5_15_2.yml
@@ -21,6 +21,7 @@ jobs:
       
       - name: Install dependencies for project
         run: |
+          brew install icu4c
           brew install libxml2
       # Install Qt 5.15.2
       # NOTE: jurplel/install-qt-action@v2.14.0 hasn't supported Qt6.2.4
