--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
-project(Swiftray VERSION 0.1.10)
+project(Swiftray VERSION 1.0.0)
+add_compile_definitions(VERSION_MAJOR=1)
+add_compile_definitions(VERSION_MINOR=0)
+add_compile_definitions(VERSION_BUILD=0)
+add_compile_definitions(VERSION_SUFFIX="_beta")
+
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 #set(CMAKE_FIND_DEBUG_MODE 1)
@@ -10,7 +15,7 @@ if(WIN32)
     set (BOOST_ROOT "C:/Dev/boost/boost_1_70_0")
     set (BOOST_INCLUDEDIR "C:/Dev/boost/boost_1_70_0/boost")
     set (BOOST_LIBRARYDIR "C:/boost_1_70_0/boost-build/lib")
-    set (OpenCV_DIR "C:/Dev/opencv-4.5.4-prebuilt/OpenCV-MinGW-Build")
+    set (OpenCV_DIR "C:/Dev/opencv/build")
 endif()
 
 find_package(Qt5 COMPONENTS Core REQUIRED)
