--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,13 +118,42 @@ endif ()
 set(MAIN_SOURCE ${SOURCES})
 qt5_add_resources(MAIN_SOURCE "qml.qrc")
 
-set(APP_ICON_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/win.rc")
-set(MACOSX_BUNDLE_ICON_FILE images/icon.icns)
-set(APP_ICON_MACOSX ${CMAKE_CURRENT_SOURCE_DIR}/images/icon.icns)
-set_source_files_properties(${APP_ICON_MACOSX} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
 
+# Swiftray Executable
+if(WIN32)
+    add_executable(${PROJECT_NAME} WIN32 ${SRC_DIR}/main.cpp ${MAIN_SOURCE} ${APP_ICON_WINDOWS} ${APP_ICON_MACOSX})
+elseif(UNIX)
+    if(APPLE)
+        add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRC_DIR}/main.cpp ${MAIN_SOURCE} ${APP_ICON_WINDOWS} ${APP_ICON_MACOSX})
+    else ()
+        MESSAGE(STATUS "Platform: Unknown")
+    endif ()
+endif()
+# Add macro definition
+target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_MAJOR=${VERSION_MAJOR})
+target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_MINOR=${VERSION_MINOR})
+target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_BUILD=${VERSION_BUILD})
+target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_SUFFIX=\"${VERSION_SUFFIX}\")
+# Bundle properties
+if(WIN32)
+    set(APP_ICON_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/win.rc")
+else()
+    if(APPLE)
+        set(APP_ICON_MACOSX ${CMAKE_CURRENT_SOURCE_DIR}/images/icon.icns)
+        set_source_files_properties(${APP_ICON_MACOSX} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+        set(MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME})
+        set(MACOSX_BUNDLE_EXECUTABLE_NAME ${PROJECT_NAME})
+        set(MACOSX_BUNDLE_INFO_STRING "Laser engraving software developed by FLUX Inc.")
+        set(MACOSX_BUNDLE_ICON_FILE icon.icns)
+        set(MACOSX_BUNDLE_GUI_IDENTIFIER com.flux.Swiftray)
+        set(MACOSX_BUNDLE_LONG_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_MINOR}${VERSION_SUFFIX})
+        set(MACOSX_BUNDLE_SHORT_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR})
+        set(MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2022, FLUX Inc.")
+    else()
+        MESSAGE(STATUS "Platform: Unknown")
+    endif()
+endif()
 
-add_executable(${PROJECT_NAME} WIN32 ${SRC_DIR}/main.cpp ${MAIN_SOURCE} ${APP_ICON_WINDOWS} ${APP_ICON_MACOSX})
 target_link_libraries(${PROJECT_NAME} Qt::Core)
 target_link_libraries(${PROJECT_NAME} Qt::Quick)
 target_link_libraries(${PROJECT_NAME} Qt::QuickWidgets)
